[tool.poetry]
name = "die-game"
version = "0.1.0"
description = ""
authors = ["smith2eric <ericsmithsonian2@gmail.com>"]
readme = "README.md"
packages = [{include = "die_game"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
